--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Студія</title>
 </head>
 <body>
-    
+    <header>
+     <nav>
+        <a href="/">
+            <img src="/images/logo.svg" alt="logo">
+        </a>
+
+        <ul>
+            <li> <a href="">Студія</a> </li>
+            <li> <a href="">Портфоліо</a> </li>
+            <li> <a href="">Контакти</a> </li>
+        </ul>
+     </nav>
+        <ul>
+            <li><a href="">info@devstudio.com</a></li>
+            <li><a href="">+38 096 111 11 11</a></li>
+        </ul>
+   
+
+
+    </header>
+    <div>
+        <section>
+            <h1>Ефективні рішення для вашого бізнесу</h1>
+            <button>Замовити послугу</button>
+        </section>
+    </div>
 </body>
+
 </html>
