--- a/index.html
+++ b/index.html
@@ -1,38 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студія</title>
 </head>
-<body>
-    <header>
-     <nav>
-        <a href="/">
-            <img src="/images/logo.svg" alt="logo">
-        </a>
+<body>  
+     <header>
+        <nav>
+            <a href="/">
+                <img src="/images/logo.svg" alt="logo">
+            </a>
 
-        <ul>
-            <li> <a href="">Студія</a> </li>
-            <li> <a href="">Портфоліо</a> </li>
-            <li> <a href="">Контакти</a> </li>
-        </ul>
-     </nav>
-        <ul>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+38 096 111 11 11</a></li>
-        </ul>
-   
-
-
-    </header>
-    <div>
+            <ul>
+                <li> <a href="">Студія</a> </li>
+                <li> <a href="">Портфоліо</a> </li>
+                <li> <a href="">Контакти</a> </li>
+            </ul>
+        </nav>
+            <ul>
+                <li><a href="">info@devstudio.com</a></li>
+                <li><a href="">+38 096 111 11 11</a></li>
+            </ul>
+     </header>
+     <main>
+        <div>
+            <section>
+                <h1>Ефективні рішення для вашого бізнесу</h1>
+                <button>Замовити послугу</button>
+            </section>
+        </div>
         <section>
-            <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button>Замовити послугу</button>
+            <ul>
+                <li>
+                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                </li>
+                <li>
+                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                </li>
+                <li>
+                    <h3>ПЛАНУВАННЯ</h3>
+                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                </li>
+                <li>
+                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
+            </ul>
+            <h2>Чим ми займаємося</h2>
+            <ul>
+                <li>
+                    <img src="/images/box 1.svg" alt="box1" width="370">
+                </li>
+                <li>
+                    <img src="/images/box 2.svg" alt="box2" width="370">
+                </li>
+                <li>
+                    <img src="/images/box 3.svg" alt="box3" width="370">
+                </li>
+            </ul>
         </section>
-    </div>
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <div>
+                        <img src="/images/img (1).svg" alt="tc1" width="270">
+                        <h3>Ігор Дем'яненко</h3>
+                        <p>Product Designer</p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <img src="/images/img (2).svg" alt="tc2" width="270">
+                        <h3>Ольга Рєпіна</h3>
+                        <p>Frontend Developer</p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <img src="/images/img (5).svg" alt="tc3" width="270">
+                        <h3>Микола Тарасов</h3>
+                        <p>Marketing</p>
+                </div>
+                </li>
+                <li>
+                    <div>
+                        <img src="/images/img (4).svg" alt="tc4" width="270">
+                        <h3>Михайло Єрмаков</h3>
+                        <p>UI Designer</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 
 </html>
