--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </ul>
         </nav>
             <ul>
-                <li><a href="">info@devstudio.com</a></li>
-                <li><a href="">+38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
      </header>
      <main>
@@ -53,13 +53,13 @@
             <h2>Чим ми займаємося</h2>
             <ul>
                 <li>
-                    <img src="/images/box 1.svg" alt="box1" width="370">
+                    <img src="/images/box1.svg" alt="box1" width="370">
                 </li>
                 <li>
-                    <img src="/images/box 2.svg" alt="box2" width="370">
+                    <img src="/images/box2.svg" alt="box2" width="370">
                 </li>
                 <li>
-                    <img src="/images/box 3.svg" alt="box3" width="370">
+                    <img src="/images/box3.svg" alt="box3" width="370">
                 </li>
             </ul>
         </section>
@@ -68,28 +68,28 @@
             <ul>
                 <li>
                     <div>
-                        <img src="/images/img (1).svg" alt="tc1" width="270">
+                        <img src="/images/img(6).svg" alt="tc1" width="270">
                         <h3>Ігор Дем'яненко</h3>
                         <p>Product Designer</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <img src="/images/img (2).svg" alt="tc2" width="270">
+                        <img src="/images/img(1).svg" alt="tc2" width="270">
                         <h3>Ольга Рєпіна</h3>
                         <p>Frontend Developer</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <img src="/images/img (5).svg" alt="tc3" width="270">
+                        <img src="/images/img(2).svg" alt="tc3" width="270">
                         <h3>Микола Тарасов</h3>
                         <p>Marketing</p>
                 </div>
                 </li>
                 <li>
                     <div>
-                        <img src="/images/img (4).svg" alt="tc4" width="270">
+                        <img src="/images/img(4).svg" alt="tc4" width="270">
                         <h3>Михайло Єрмаков</h3>
                         <p>UI Designer</p>
                     </div>
@@ -98,9 +98,16 @@
         </section>
     </main>
     <footer>
+        <a href="/">
+            <img src="/images/logo.svg" alt="logo">
+        </a>
+        <address>
+            м. Київ, пр-т Лесі Українки, 26 <br>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </address>
 
     </footer>
 </body>
-
 
 </html>
