--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
     <header>
       <nav>
-        <a href="/"> WebStudio </a>
+        <a href="/"> <span>Web</span>Studio </a>
 
         <ul>
           <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
+          <li><a href="./portfolio.html">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
@@ -89,7 +89,7 @@
       </section>
     </main>
     <footer>
-      <a href="/"> WebStudio </a>
+      <a href="/"> <span>Web</span>Studio </a>
       <address>
         м. Київ, пр-т Лесі Українки, 26
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
